# JSentinel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/desktop-ui/: README.md  index.html  package.json
apps/desktop-ui/src/: App.tsx  actions.ts  events.ts  i18n.ts  styles.css  system.ts  types.ts  viewModels.ts
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/capabilities/: default.json
apps/desktop-ui/src-tauri/src/: main.rs
apps/desktop-ui/src/components/: Sidebar.tsx  SponsorBanner.tsx  actions.tsx  ui.tsx
apps/desktop-ui/src/locales/: en.json  ru.json
apps/desktop-ui/src/screens/: AboutScreen.tsx  DashboardScreen.tsx  FilesScreen.tsx  NetworkScreen.tsx  PlaceholderScreen.tsx  ProcessesScreen.tsx  SettingsScreen.tsx  StartupScreen.tsx  TimelineScreen.tsx
crates/jsentinel-core/: Cargo.toml  README.md
crates/jsentinel-core/src/: actions.rs  lib.rs
crates/jsentinel-db/: Cargo.toml  README.md
crates/jsentinel-db/src/: lib.rs
crates/jsentinel-device-access/: Cargo.toml  README.md
crates/jsentinel-device-access/src/: lib.rs
crates/jsentinel-events/: Cargo.toml  README.md
crates/jsentinel-events/src/: lib.rs
crates/jsentinel-files/: Cargo.toml  README.md
crates/jsentinel-files/src/: lib.rs
crates/jsentinel-linux/: Cargo.toml  README.md
crates/jsentinel-linux/src/: lib.rs
crates/jsentinel-network/: Cargo.toml  README.md
crates/jsentinel-network/src/: lib.rs
crates/jsentinel-policy/: Cargo.toml  README.md
crates/jsentinel-policy/src/: lib.rs
crates/jsentinel-quarantine/: Cargo.toml  README.md
crates/jsentinel-quarantine/src/: lib.rs
crates/jsentinel-startup/: Cargo.toml  README.md
crates/jsentinel-startup/src/: lib.rs
crates/jsentinel-windows/: Cargo.toml  README.md
crates/jsentinel-windows/src/: lib.rs
docs/: ACTION_FRAMEWORK.md  ARCHITECTURE.md  BUILD_AND_TEST.md  CI_TRIAGE.md  CODEX_RULES.md  DATABASE.md  DOWNLOADS.md  EVENT_MODEL.md  FEATURE_SCOPE_V1.md  FIRST_GITHUB_PUSH.md  FOUNDATION_VALIDATION.md  KILL_PROCESS_ACTION_V1.md  KILL_PROCESS_SECURITY_REVIEW.md  MASTER_PLAN.md  PRIVACY.md  READ_ONLY_BACKEND_LIMITATIONS.md  RELEASE_PROCESS.md  SAFE_ACTIONS_SECURITY_REVIEW.md  SAFE_ACTIONS_V1.md  SECURITY.md  STARTUP_GUARD_ACTION_MODEL.md  THREAT_MODEL.md  UI_PRODUCT_LAYER.md  USER_GUIDE.md  WHAT_IT_CAN_AND_CANNOT_DO.md  WINDOWS_READ_ONLY_BACKEND.md
installer/linux/: README.md
installer/windows/: README.md
scripts/dev/: check-all.ps1  check-all.sh  check-foundation.ps1  check-foundation.sh  check-frontend.ps1  check-frontend.sh  check-rust.ps1  check-rust.sh  check-safe-actions.ps1  check-tauri-icons.ps1  generate-ico-from-png.ps1
scripts/release/: build-linux.sh  build-windows.ps1  generate-checksums.ps1  generate-checksums.sh
services/linux-daemon/: README.md
services/windows-service/: README.md
