[workspace]
resolver = "2"
members = [
  "apps/desktop-ui/src-tauri",
  "crates/jsentinel-core",
  "crates/jsentinel-db",
  "crates/jsentinel-events",
  "crates/jsentinel-policy",
  "crates/jsentinel-windows",
  "crates/jsentinel-linux",
  "crates/jsentinel-quarantine",
  "crates/jsentinel-network",
  "crates/jsentinel-files",
  "crates/jsentinel-startup",
  "crates/jsentinel-device-access",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/jsentinel"
homepage = "https://github.com/your-org/jsentinel"
rust-version = "1.78"

[workspace.lints.rust]
unsafe_code = "forbid"
