[package]
name = "jsentinel-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "jsentinel_core"
path = "src/lib.rs"

[dependencies]
jsentinel-db = { path = "../jsentinel-db" }
jsentinel-events = { path = "../jsentinel-events" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
