[package]
name = "jsentinel-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "jsentinel_db"
path = "src/lib.rs"

[dependencies]
jsentinel-events = { path = "../jsentinel-events" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
