[package]
name = "jsentinel-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "jsentinel_windows"
path = "src/lib.rs"

[dependencies]
jsentinel-core = { path = "../jsentinel-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
