[package]
name = "jsentinel-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "jsentinel_windows"
path = "src/lib.rs"

[dependencies]
jsentinel-core = { path = "../jsentinel-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
