[package]
name = "jsentinel-desktop-ui"
version = "0.1.0"
description = "JSentinel desktop UI shell"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
jsentinel-core = { path = "../../../crates/jsentinel-core" }
jsentinel-db = { path = "../../../crates/jsentinel-db" }
jsentinel-events = { path = "../../../crates/jsentinel-events" }
jsentinel-windows = { path = "../../../crates/jsentinel-windows" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
